Change History
--------------

This file contains a list of all changes starting after the release of
sox-11gamma.

sox-12.17.9
-----------

  o Updates to compile under VC6. Jimen Ching

sox-12.17.8
-----------
  o noisered effect had compile problems with some compilers.
  o "-x" option was being ignored since 12.17.7.
  o Stuart Brady added support for reading and writing RIFX files (big
    endian RIFF/WAV files).  Also added support for auto detecting
    DEC-style ".sd\0" files.
  o Gene Mar found typo in polyphase nuttall calculation.
  o SMP buffer overflow (detected by gcc 4.0).  Reported by Marcus Meissner
    and Matthias Saou.
  o Fixed URL in manpage to resample overviews.
  o Fixed WAV handler so that it didn't think WAV chunks with max size
    were invalid chunks.  This allows WAV's to be used in pipes since
    they have to default to max size.
  o WAV files with alaw or ulaw data don't need extended format chunks.
    (Lars Immisch)
  o In AIFF files, fixed problem were short comments should cause
    AIFF handler to get confused and become misaligned.

sox-12.17.7
-----------
  o Christian Weisgerber sent patches to man page fixes
    and patches for sunaudio driver on openbsd.
  o Default volume for soxmix wrongly set to 0 instead
    of 1/#_input_files (float rounding error).
  o Update to ALSA driver to do a better job of detecting
    unsupported sample rate/size/encoding and change to
    a supported one.
  o Fix bug in alsa writing were last last partial buffer
    wasn't being flushed.
  o Guentcho Skordev pointed out ogg vorbis files were using
    the same value for serial numbers each time.
  o Changed sox to only read the exact size of a WAV data chunk
    if cooledit IFF LIST chunk is found at the end of the file.
    Normally, this isn't done to allow reading > 2gig WAV files.
  o Modified configure to detect cygwin compiler after detecting
    gcc compiler (fixes some default CFLAGS options).