@@ -63,7 +63,7 @@ typedef struct aupriv {
 
 static void auwriteheader(ft_t ft, st_size_t data_size);
 
-static int st_auencodingandsize(int sun_encoding, char *encoding, char *size)
+static int st_auencodingandsize(int sun_encoding, signed char *encoding, signed char *size)
 {
     switch (sun_encoding) {
     case SUN_ULAW:
